update readme, add gif, seed script, navbar spacing, update routes, disable toggle during generation
